--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "ANNA_BEN_BOT",
+    "name": "PROFFESER_BOT",
     "description": "When you going to send file on telegram channel this bot will save that in database, So you can search that easily in inline mode",
-    "logo": "https://telegra.ph/file/87fd3f1437dbd06644b20.jpg",
+    "logo": "https://telegra.ph/file/a3d47a68ac29015031527.jpg",
     "keywords": [
       "telegram",
       "auto-filter",
